--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.dll.config
 *.cache
 *.suo
+
 # Include dlls if they’re in the NuGet packages directory
 !/packages/*/lib/*.dll
 !/packages/*/lib/*/*.dll
@@ -25,6 +26,9 @@ _UpgradeReport_Files/
 bin/
 obj/
 TestResults/
+# Visual Studio 2015 cache/options directory
+.vs/
+
 ###################
 # Web publish log #
 ###################
